# cdd-openapi

./: Cargo.toml  README.md
src/: comparison.rs  fixtures.rs  generate.rs  generator.rs  main.rs  models.rs  parse.bak.rs  parse.rs  parser.rs  rpc.rs  template.rs  util.rs  variable.rs
src/extractor/: mod.rs  models.rs  requests.rs
templates/: 3commas.yaml
