[package]
name = "cdd-openapi"
version = "0.1.0"
description = "cdd-openapi is a Rust library that exposes a JSON-RPC interface to OpenAPI [Swagger] manipulation, following Compiler Driven Development (CDD) methodology."
authors = ["Rob Saunders <rob@wearebrandnew.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/offscale/cdd-openapi"
homepage = "https://compilers.com.au"
readme = "README.md"

[dependencies]
openapiv3 = "0.3"
jsonrpc-ws-server = "14.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
indexmap = {version = "1.3.1", features = ["serde-1"]}
cdd = { path = "../cdd-core" }
failure = "0.1.6"
url = "2.1.1"
